# kaydet.link

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  README.md  credits.md  manage.py  pyproject.toml
.claude/: mcp.json
.claude/skills/: semantic-html-css.md
config/: settings.py  urls.py
core/: apps.py  context_processors.py  exceptions.py  urls.py
core/admin/: __init__.py  base.py  bookmark.py  comment.py  link.py  notification.py  tag.py  user_preferences.py  wiki.py
core/fixtures/: seed.json
core/forms/: auth.py  collection.py  comment.py  link.py  preferences.py
core/migrations/: 0001_initial.py  0002_add_bookmark_is_private.py  0003_add_collection_model.py  0004_add_bookmark_reading_status.py  0005_add_bookmark_pin_fields.py  0006_remove_collections.py
core/models/: __init__.py  bookmark.py  collection.py  comment.py  link.py  notification.py  tag.py  user_preferences.py  wiki.py
core/services/: ai.py  bookmark.py  digest.py  link.py  notification.py
core/signals/: bookmark_signals.py  comment_signals.py  link_signals.py
core/templates/: base.html
core/templatetags/: avatar.py  gravatar.py  notification_tags.py
core/views/: ai.py  bookmark_list.py  bookmark_status.py  collection.py  comment.py  dashboard.py  data.py  link.py  notification.py  preferences.py  search.py  tag.py  wiki.py
docs/: design-brief.md
docs/milestones/: personal-app-experience.md
tests/: test_models_bookmark.py  test_models_link.py  test_models_tag.py  test_services_bookmark.py  test_views_auth.py  test_views_link.py
(+58 files in other folders)
